--- a/content/css/navbar.scss
+++ b/content/css/navbar.scss
@@ -29,7 +29,7 @@ $default-border-radius:	15px;
 	list-style:	none;
 	line-height:	1.0;
 
-	padding-top:	1.2em;
+	padding-top:	1.25em;
 	margin-right:	12%;
 	float:		right;
     }
